fix: docs build

--- a/apps/website/docs/guide/08-advanced/01-setup-commandkit-manually.mdx
+++ b/apps/website/docs/guide/08-advanced/01-setup-commandkit-manually.mdx
@@ -154,7 +154,7 @@ slash command, or sends `!ping` in the chat.
 
 The prefix for message commands can be changed globally or per-guild.
 Learn more
-[here](../02-commands/05-custom-message-commands-prefix.mdx).
+[here](../02-commands/04-message-commands.mdx#custom-prefixes).
 
 :::
 
