chore: update discord invite

--- a/apps/website/docs/guide/01-getting-started/01-introduction.mdx
+++ b/apps/website/docs/guide/01-getting-started/01-introduction.mdx
@@ -22,7 +22,7 @@ import Logo from './Logo';
       gap: '0.5rem',
     }}
   >
-    <a href="https://neplextech.com/discord">
+    <a href="https://commandkit.dev/discord">
       <img
         src="https://img.shields.io/discord/1055188344188973066?color=5865F2&logo=discord&logoColor=white"
         alt="support discord server"
@@ -76,4 +76,4 @@ complexities.
 ## Support and suggestions
 
 - [GitHub repository](https://github.com/neplextech/commandkit)
-- [Discord community](https://neplextech.com/discord)
+- [Discord community](https://commandkit.dev/discord)
