--- a/apps/website/docs/guide/05-official-plugins/04-commandkit-devtools.mdx
+++ b/apps/website/docs/guide/05-official-plugins/04-commandkit-devtools.mdx
@@ -185,4 +185,4 @@ improving the devtools experience. Please report issues, suggest
 features, or contribute to the development through:
 
 - [GitHub Issues](https://github.com/neplextech/commandkit/issues)
-- [Discord Community](https://neplextech.com/discord)
+- [Discord Community](https://commandkit.dev/discord)
