--- a/apps/website/versioned_docs/version-0.1.10/guide/01-installation.mdx
+++ b/apps/website/versioned_docs/version-0.1.10/guide/01-installation.mdx
@@ -24,7 +24,7 @@ import TabItem from '@theme/TabItem';
       gap: '0.5rem',
     }}
   >
-    <a href="https://neplextech.com/discord">
+    <a href="https://commandkit.dev/discord">
       <img
         src="https://img.shields.io/discord/1055188344188973066?color=5865F2&logo=discord&logoColor=white"
         alt="support discord server"
