--- a/apps/website/docs/guide/05-official-plugins/10-commandkit-workflow.mdx
+++ b/apps/website/docs/guide/05-official-plugins/10-commandkit-workflow.mdx
@@ -1,6 +1,7 @@
 ---
 title: '@commandkit/workflow'
-description: Learn how to use the @commandkit/workflow plugin to build durable,
+description:
+  Learn how to use the @commandkit/workflow plugin to build durable,
   long-running workflows with CommandKit.
 ---
 
@@ -117,6 +118,14 @@ export const chatInput: ChatInputCommand = async (ctx) => {
 };
 ```
 
+## Using custom Worlds
+
+You can use any world providers from
+[useworkflow.dev/worlds](https://useworkflow.dev/worlds) or create
+your own custom world. Refer to the
+[Building a World](https://useworkflow.dev/docs/deploying/building-a-world)
+documentation for more details.
+
 ## Project structure
 
 Organize your workflows and steps in a clear structure:
@@ -155,7 +164,10 @@ import { sendWelcomeMessage } from './steps/send-welcome-message';
 import { assignRole } from './steps/assign-role';
 import { sendFollowUpMessage } from './steps/send-follow-up-message';
 
-export async function userOnboardingWorkflow(userId: string, guildId: string) {
+export async function userOnboardingWorkflow(
+  userId: string,
+  guildId: string,
+) {
   'use workflow';
 
   await sendWelcomeMessage(userId, guildId);
@@ -176,7 +188,10 @@ export async function userOnboardingWorkflow(userId: string, guildId: string) {
 import { FatalError } from 'workflow';
 import { useClient } from 'commandkit/hooks';
 
-export async function sendWelcomeMessage(userId: string, guildId: string) {
+export async function sendWelcomeMessage(
+  userId: string,
+  guildId: string,
+) {
   'use step';
 
   const client = useClient<true>();
@@ -236,7 +251,10 @@ import {
   logMemberJoin,
 } from './steps';
 
-export async function memberSetupWorkflow(userId: string, guildId: string) {
+export async function memberSetupWorkflow(
+  userId: string,
+  guildId: string,
+) {
   'use workflow';
 
   const [roles, channel, log] = await Promise.all([
@@ -258,7 +276,10 @@ Step functions have full access to CommandKit hooks:
 ```ts
 import { useClient, useCommandKit } from 'commandkit/hooks';
 
-export async function updateMemberStats(userId: string, guildId: string) {
+export async function updateMemberStats(
+  userId: string,
+  guildId: string,
+) {
   'use step';
 
   const client = useClient<true>();
@@ -332,9 +353,14 @@ export async function sendModerationAction(
 
   try {
     if (action === 'warn') {
-      await member.send('You have been warned for violating server rules.');
+      await member.send(
+        'You have been warned for violating server rules.',
+      );
     } else if (action === 'mute') {
-      await member.timeout(60 * 60 * 1000, 'Violation of server rules');
+      await member.timeout(
+        60 * 60 * 1000,
+        'Violation of server rules',
+      );
     } else if (action === 'kick') {
       await member.kick('Violation of server rules');
     }
