--- a/apps/website/docs/guide/05-official-plugins/10-commandkit-workflow.mdx
+++ b/apps/website/docs/guide/05-official-plugins/10-commandkit-workflow.mdx
@@ -1,7 +1,6 @@
 ---
 title: '@commandkit/workflow'
-description:
-  Learn how to use the @commandkit/workflow plugin to build durable,
+description: Learn how to use the @commandkit/workflow plugin to build durable,
   long-running workflows with CommandKit.
 ---
 
@@ -164,10 +163,7 @@ import { sendWelcomeMessage } from './steps/send-welcome-message';
 import { assignRole } from './steps/assign-role';
 import { sendFollowUpMessage } from './steps/send-follow-up-message';
 
-export async function userOnboardingWorkflow(
-  userId: string,
-  guildId: string,
-) {
+export async function userOnboardingWorkflow(userId: string, guildId: string) {
   'use workflow';
 
   await sendWelcomeMessage(userId, guildId);
@@ -188,10 +184,7 @@ export async function userOnboardingWorkflow(
 import { FatalError } from 'workflow';
 import { useClient } from 'commandkit/hooks';
 
-export async function sendWelcomeMessage(
-  userId: string,
-  guildId: string,
-) {
+export async function sendWelcomeMessage(userId: string, guildId: string) {
   'use step';
 
   const client = useClient<true>();
@@ -251,10 +244,7 @@ import {
   logMemberJoin,
 } from './steps';
 
-export async function memberSetupWorkflow(
-  userId: string,
-  guildId: string,
-) {
+export async function memberSetupWorkflow(userId: string, guildId: string) {
   'use workflow';
 
   const [roles, channel, log] = await Promise.all([
@@ -276,10 +266,7 @@ Step functions have full access to CommandKit hooks:
 ```ts
 import { useClient, useCommandKit } from 'commandkit/hooks';
 
-export async function updateMemberStats(
-  userId: string,
-  guildId: string,
-) {
+export async function updateMemberStats(userId: string, guildId: string) {
   'use step';
 
   const client = useClient<true>();
@@ -353,14 +340,9 @@ export async function sendModerationAction(
 
   try {
     if (action === 'warn') {
-      await member.send(
-        'You have been warned for violating server rules.',
-      );
+      await member.send('You have been warned for violating server rules.');
     } else if (action === 'mute') {
-      await member.timeout(
-        60 * 60 * 1000,
-        'Violation of server rules',
-      );
+      await member.timeout(60 * 60 * 1000, 'Violation of server rules');
     } else if (action === 'kick') {
       await member.kick('Violation of server rules');
     }
